# hackai

./: .gitignore  DEPLOYMENT.md  DIGITALOCEAN_DEPLOYMENT.md  OAUTH_SETUP.md  PROJECT_DESCRIPTION.md  README.md  YOUTUBE_BOT_DETECTION.md  docker-compose.yml  env.example  fix-ffmpeg.sh  package.json  package.json.backup  remove-bundled-ffmpeg.sh  setup.sh  start.sh
.do/: app.yaml
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt  start-production.sh
backend/app/: __init__.py  config.py  main.py  schemas.py  storage.py
backend/app/output_clips/: .gitkeep
backend/app/video_processing/: __init__.py  caption_burner.py  captions.py  pipeline.py  segments.py  transcribe.py
frontend/: .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  run-dev.sh
frontend/public/: .gitkeep
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/instagram/callback/: page.tsx
frontend/src/app/auth/youtube/callback/: page.tsx
frontend/src/app/create/: page.tsx
frontend/src/services/: apiClient.ts
ml_stuff/: test.py
ml_stuff/processors/: captions.py  segments.py  transcribe.py
