[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-shorts-backend"
version = "0.1.0"
description = "FastAPI backend for YouTube to Shorts service"
authors = [{name = "Developer", email = "dev@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Core web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    
    # Core Python dependencies
    "numpy>=1.21.0",
    "requests>=2.28.0",
    
    # Video processing dependencies
    "yt-dlp>=2023.7.6",
    "moviepy>=1.0.3",
    "pydub>=0.25.1",
    
    # AI/ML dependencies (versions compatible with Python 3.13)
    "openai-whisper>=20230918",
    "transformers>=4.30.0",
    "openai>=1.0.0",
    "torch>=2.0.0",
    
    # Build tools
    "setuptools<81",
    "wheel",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

# Local dependency on the video processor package
[tool.setuptools.packages.find]
where = ["app"]

[project.urls]
Homepage = "https://github.com/example/youtube-shorts"
Repository = "https://github.com/example/youtube-shorts.git"

# Note: The video_processor dependency should be installed separately
# pip install -e ../packages/video_processor 